# OS_laba4

./: CMakeLists.txt
analysis/: parse_plot.py
common/include/: Logger.h  SharedMemory.h  SyncObjects.h
common/src/: Logger.cpp  SharedMemory.cpp  SyncObjects.cpp
reader/src/: main.cpp
scripts/: clean_logs.bat  run_all.bat
writer/src/: main.cpp
